# Kapitonov-Plugins-Pack

./: Makefile  README.md  guide.md  guide_ru.md  meson.build  meson_options.txt
LADSPA/: ladspa-faustarch.cpp  meson.build
LADSPA/kpp_bluedream/: build.sh  kpp_bluedream.dsp
LADSPA/kpp_bluedream/faust-generated/: kpp_bluedream.dsp.cpp
LADSPA/kpp_deadgate/: build.sh  kpp_deadgate.dsp
LADSPA/kpp_deadgate/faust-generated/: kpp_deadgate.dsp.cpp
LADSPA/kpp_distruction/: build.sh  kpp_distruction.dsp
LADSPA/kpp_distruction/faust-generated/: kpp_distruction.dsp.cpp
LADSPA/kpp_fuzz/: build.sh  kpp_fuzz.dsp
LADSPA/kpp_octaver/: build.sh  kpp_octaver.dsp
LADSPA/kpp_single2humbucker/: build.sh  kpp_single2humbucker.dsp
LV2/: meson.build
LV2/kpp_bluedream/: Makefile  build.sh  kpp_bluedream.dsp
LV2/kpp_bluedream/faust-generated/: kpp_bluedream.cpp
LV2/kpp_bluedream/kpp_bluedream.lv2/: kpp_bluedream.ttl  manifest.ttl
LV2/kpp_bluedream/kpp_bluedream_ui.src/: kpp_bluedream_gui.c  kpp_bluedream_gui.cpp
LV2/kpp_deadgate/: Makefile  build.sh  kpp_deadgate.dsp
LV2/kpp_deadgate/faust-generated/: kpp_deadgate.cpp
LV2/kpp_deadgate/kpp_deadgate.lv2/: kpp_deadgate.ttl  manifest.ttl
LV2/kpp_distruction/: Makefile  build.sh  kpp_distruction.dsp
LV2/kpp_distruction/faust-generated/: kpp_distruction.cpp
LV2/kpp_distruction/kpp_distruction.lv2/: kpp_distruction.ttl  manifest.ttl
LV2/kpp_distruction/kpp_distruction_ui.src/: kpp_distruction_gui.c  kpp_distruction_gui.cpp
LV2/kpp_fuzz/: Makefile  build.sh  kpp_fuzz.dsp
LV2/kpp_fuzz/faust-generated/: kpp_fuzz.cpp
LV2/kpp_fuzz/kpp_fuzz.lv2/: kpp_fuzz.ttl  manifest.ttl
LV2/kpp_fuzz/kpp_fuzz_ui.src/: kpp_fuzz_gui.c  kpp_fuzz_gui.cpp
LV2/kpp_octaver/: Makefile  build.sh  kpp_octaver.dsp
LV2/kpp_octaver/faust-generated/: kpp_octaver.cpp
LV2/kpp_octaver/kpp_octaver.lv2/: kpp_octaver.ttl  manifest.ttl
LV2/kpp_single2humbucker/: Makefile  build.sh  kpp_single2humbucker.dsp
LV2/kpp_single2humbucker/faust-generated/: kpp_single2humbucker.cpp
LV2/kpp_single2humbucker/kpp_single2humbucker.lv2/: kpp_single2humbucker.ttl  manifest.ttl
LV2/kpp_tubeamp/: Makefile  build.sh  faust-support.h  kpp_tubeamp.cpp  kpp_tubeamp.dsp  kpp_tubeamp.h  plugin.h  profile.h
LV2/kpp_tubeamp/faust-generated/: kpp_tubeamp_dsp.cpp  stPorts.patch
LV2/kpp_tubeamp/kpp_tubeamp.lv2/: kpp_tubeamp.ttl  manifest.ttl
LV2/kpp_tubeamp/kpp_tubeamp.lv2/profiles/: American Clean.tapf  American Vintage.tapf  British Crunch.tapf  Modern Metal.tapf
LV2/kpp_tubeamp/kpp_tubeamp.lv2/profiles/v1.2/: Classic Hard.tapf  JCM800-SPICE.tapf  Mark2.tapf  TwinReverb (spice).tapf
LV2/kpp_tubeamp/kpp_tubeamp_ui.src/: kpp_file_picker.h  kpp_tubeamp_gui.c  kpp_tubeamp_gui.cpp
